discussion/kv_engine/125164/125164_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38326: Change MagmaRequest getKey & getKeyLen function names

These are getting confused with IORequest equivalents.

Change-Id: Ife94dd2425a8587321b78ecd7d5e6663a89daf31

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-08 15:09:16.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-08 15:36:32.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23458/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23458/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3044/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3044/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3053/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3053/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10906/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10906/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3109/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3109/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27421/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27421/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1634/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29: error: expected class name [clang-diagnostic-error]
class MagmaRequest : public IORequest {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:45:16: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return key.size();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:49:46: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return reinterpret_cast<const char*>(key.data());
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1634/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1634/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2101/ : FAILURE

Failure of a CTest test [2020-04-08T15:27:18.852Z] 229/397 Test #229: ep_testsuite.full_eviction.rocksdb ..........................................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2101/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/155/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
